# simulations

./: CMakeLists.txt  Code.7z  Ising.7z  run_script.sh
1_not_optimized/: CMakeLists.txt
1_not_optimized/parameters/: parameters.txt
1_not_optimized/plotting/: drawing.cpp
1_not_optimized/runs/: 100.txt  150.txt  200.txt  250.txt  300.txt  350.txt  400.txt  450.txt  50.txt  500.txt  550.txt  600.txt  650.txt  700.txt  750.txt  800.txt  850.txt  900.txt
1_not_optimized/simulation/: globaldata.h  initializer.c  main.c  running.c  running.h
1_optimized/plotting/: drawing.cpp  globaldata.cpp
1_optimized/runs/: 001.txt  050.txt  100.txt  150.txt  200.txt  250.txt  300.txt  350.txt  400.txt  450.txt  500.txt  550.txt  600.txt  650.txt  700.txt  750.txt  800.txt  850.txt  900.txt  950.txt
1_optimized/simulation/: globaldata.h  initializer.c  initializer.h  main.c  running.c  running.h
plotting/: drawing.cpp  globaldata.cpp  globaldata.h  main.cpp
simulation/: globaldata.h  initializer.c  initializer.h  main.c  running.c  running.h
